--- a/Games.html
+++ b/Games.html
@@ -39,15 +39,16 @@
 
         .game {
             margin-bottom: 20px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
         }
 
-        .game iframe {
+        .game img {
             width: 100%;
-            max-width: 800px;
-            height: 450px; /* Adjust the height as needed */
-            margin: 0 auto;
-            display: block;
-            border: none;
+            max-width: 400px;
+            height: auto;
+            border-radius: 10px;
+            transition: filter 0.3s ease;
         }
 
         .game-title {
@@ -55,6 +56,15 @@
             font-weight: bold;
             margin-bottom: 10px;
             color: #FFD700; /* Gold color for game titles */
+        }
+
+        /* Hover effects */
+        .game:hover {
+            transform: scale(1.05);
+        }
+
+        .game:hover img {
+            filter: brightness(80%);
         }
     </style>
 </head>
@@ -65,13 +75,13 @@
 </header>
 
 <div class="games-container">
-    <div class="game">
-        <div class="game-title">Game 1: Example Game</div>
-        <iframe src="https://example.com/game1" title="Game 1"></iframe>
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Negative0Web/flappy';">
+        <div class="game-title">Flappy Zer0</div>
+        <img src="Game1.png" alt="Game 1">
     </div>
-    <div class="game">
-        <div class="game-title">Game 2: Example Game</div>
-        <iframe src="https://example.com/game2" title="Game 2"></iframe>
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Negative0Web/Game2';">
+        <div class="game-title">Snake game</div>
+        <img src="Game2.png" alt="Game 2">
     </div>
     <!-- Add more games as needed -->
 </div>
