--- a/Buttons.html
+++ b/Buttons.html
@@ -34,25 +34,20 @@
             cursor: pointer;
             transition: all 0.3s ease;
             color: #fff;
+            background-color: #333;
+            position: relative;
         }
 
         /* Button styles and hover effects */
-        .btn-1 {
-            background-color: #333;
-        }
         .btn-1:hover {
             background-color: #555;
         }
 
-        .btn-2 {
-            background-color: #444;
-        }
         .btn-2:hover {
             transform: scale(1.1);
         }
 
         .btn-3 {
-            background-color: #555;
             position: relative;
             overflow: hidden;
         }
@@ -70,15 +65,11 @@
             left: 0;
         }
 
-        .btn-4 {
-            background-color: #666;
-        }
         .btn-4:hover {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
         .btn-5 {
-            background-color: #777;
             position: relative;
         }
         .btn-5::after {
@@ -98,22 +89,15 @@
             height: 200%;
         }
 
-        .btn-6 {
-            background-color: #888;
-        }
         .btn-6:hover {
             letter-spacing: 2px;
         }
 
-        .btn-7 {
-            background-color: #999;
-        }
         .btn-7:hover {
             background: linear-gradient(135deg, #808080, #008080);
         }
 
         .btn-8 {
-            background-color: #aaa;
             position: relative;
             overflow: hidden;
         }
@@ -132,6 +116,158 @@
             top: 0;
             left: 0;
         }
+
+        .btn-stars {
+            background-color: #444;
+            position: relative;
+            overflow: hidden;
+        }
+        .btn-stars span {
+            position: absolute;
+            display: block;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 255, 255, 0.3);
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            animation: stars 2s linear infinite;
+            opacity: 0;
+        }
+        .btn-stars:hover span {
+            opacity: 1;
+        }
+        .btn-stars span:nth-child(1) {
+            top: 20%;
+            left: 10%;
+            animation-delay: 0s;
+        }
+        .btn-stars span:nth-child(2) {
+            top: 50%;
+            left: 70%;
+            animation-delay: 0.5s;
+        }
+        .btn-stars span:nth-child(3) {
+            top: 80%;
+            left: 30%;
+            animation-delay: 1s;
+        }
+
+        @keyframes stars {
+            0% {
+                transform: translateY(0) scale(1);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-80px) scale(0.5);
+                opacity: 0;
+            }
+        }
+
+        /* Additional unique button hover effects */
+        .btn-9 {
+            overflow: hidden;
+        }
+        .btn-9::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            transform: scale(0);
+            transition: transform 0.5s;
+        }
+        .btn-9:hover::after {
+            transform: scale(1);
+        }
+
+        .btn-10:hover {
+            background: #ff006e;
+        }
+
+        .btn-11:hover {
+            border-radius: 50px;
+        }
+
+        .btn-12 {
+            position: relative;
+            overflow: hidden;
+        }
+        .btn-12::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.1);
+            transform: translateY(-100%);
+            transition: transform 0.3s;
+        }
+        .btn-12:hover::before {
+            transform: translateY(0);
+        }
+
+        .btn-13:hover {
+            background: linear-gradient(135deg, #333, #555);
+        }
+
+        .btn-14 {
+            overflow: hidden;
+        }
+        .btn-14::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateX(-100%);
+            transition: transform 0.5s;
+        }
+        .btn-14:hover::before {
+            transform: translateX(0);
+        }
+
+        .btn-15 {
+            position: relative;
+            overflow: hidden;
+        }
+        .btn-15::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 300%;
+            height: 300%;
+            background: rgba(255, 255, 255, 0.1);
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.5s;
+        }
+        .btn-15:hover::before {
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        .btn-16 {
+            position: relative;
+            overflow: hidden;
+        }
+        .btn-16::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            transform: translate(-50%, -50%) rotate(45deg) scale(0);
+            transition: transform 0.5s;
+        }
+        .btn-16:hover::before {
+            transform: translate(-50%, -50%) rotate(45deg) scale(1);
+        }
+
     </style>
 </head>
 <body>
@@ -145,6 +281,19 @@
         <button class="btn-6">Hover Effect 6</button>
         <button class="btn-7">Hover Effect 7</button>
         <button class="btn-8">Hover Effect 8</button>
+        <button class="btn-stars">Hover Effect Stars
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <button class="btn-9">Hover Effect 9</button>
+        <button class="btn-10">Hover Effect 10</button>
+        <button class="btn-11">Hover Effect 11</button>
+        <button class="btn-12">Hover Effect 12</button>
+        <button class="btn-13">Hover Effect 13</button>
+        <button class="btn-14">Hover Effect 14</button>
+        <button class="btn-15">Hover Effect 15</button>
+        <button class="btn-16">Hover Effect 16</button>
     </div>
 
 </body>
